fix spacing

--- a/frontend/tadoku-ui/styles/globals.css
+++ b/frontend/tadoku-ui/styles/globals.css
@@ -198,7 +198,7 @@
   }
 
   .label-inline {
-    @apply h-stack items-center h-8;
+    @apply h-stack items-center h-8 space-x-3;
   }
 
   .btn {
